--- a/_posts/2025-01-01-post.md
+++ b/_posts/2025-01-01-post.md
@@ -1,6 +1,9 @@
 ---
 title: "Power On Self Test"
 date: 2025-01-01
+tags:
+    - motivation
+    - meta
 ---
 
 In 2002, I was working at Galileo International, which has since become part of Travelport, Inc. I was working on the Galileo Web Services project, which was a set of SOAP-based services that exposed the Galileo mainframes to the web. I heard that [Chris Sells](https://sellsbrothers.com/) was running this [Web Services DevCon](https://sellsbrothers.com/public/conference/oldindex3.htm#said) in Beaverton, OR, so I got my employer to pay for the trip. It was a great little conference but the one thing that I didn't expect was that I'd get interested in weblogs, because there were a number of people running tech weblogs who attended. I remember that [Sam Ruby](http://intertwingly.net/blog/) was there, as were Steve Loughran and Patrick Logan, and they were my entry into weblogs. A couple years later, I went over to NewsGator (now Sitrion) and spent a couple of years working on their aggregator, mostly competing with Bloglines. Then Twitter started, Facebook opened themselves up to people other than college students, and then Google dropped the big bomb with Google Reader. By 2009 I had 2 kids with a third on the way, I was knee-deep working at VRBO at a time when they were growing rapidly, I was self-hosting a home-cooked monstrosity of a blog engine, and I lost the energy and interest in blogging, both reading and writing.
